lint and pom