@@ -43,7 +43,6 @@
     <scala.patch.version>8</scala.patch.version>
     <scala.compat.version>${scala.major.version}.${scala.minor.version}</scala.compat.version>
     <scala.version>${scala.compat.version}.${scala.patch.version}</scala.version>
-    <!-- keep in-sync with python/requirements-3.3_2.13.txt -->
     <spark.major.version>3</spark.major.version>
     <spark.minor.version>5</spark.minor.version>
     <spark.patch.version>3-1</spark.patch.version>
@@ -156,7 +155,7 @@
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/java</testSourceDirectory>
+    <testSourceDirectory>src/test/scala</testSourceDirectory>
 
     <testResources>
       <testResource>
@@ -195,24 +194,6 @@
             </goals>
             <configuration>
               <outputFile>${project.build.outputDirectory}/spark-dfsss-build.properties</outputFile>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.coderplus.maven.plugins</groupId>
-        <artifactId>copy-rename-maven-plugin</artifactId>
-        <version>1.0.1</version>
-        <executions>
-          <execution>
-            <id>provide-requirements-txt</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <sourceFile>${project.basedir}/python/requirements-${spark.compat.version}_${scala.compat.version}.txt</sourceFile>
-              <destinationFile>${project.basedir}/python/requirements.txt</destinationFile>
             </configuration>
           </execution>
         </executions>
@@ -291,6 +272,7 @@
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>WDF TestSuite.txt</filereports>
+          <argLine>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
         </configuration>
         <executions>
           <execution>
